# SysMood

./: CMakeLists.txt  COMPILATION_FIXES.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.bat  dashboard.html  test_build.cpp
.github/ISSUE_TEMPLATE/: bug_report.md  custom_issue.md  documentation_issue.md  feature_request.md
.github/workflows/: ci.yml
include/: config.h  cpu_monitor.h  disk_monitor.h  httplib.h  logging.h  memory_monitor.h  network_monitor.h  process_monitor.h  temperature_monitor.h  web_server.h
include/nlohmann/: json.hpp
src/: config.cpp  cpu_monitor.cpp  disk_monitor.cpp  logging.cpp  main.cpp  memory_monitor.cpp  network_monitor.cpp  process_monitor.cpp  temperature_monitor.cpp  web_server.cpp
